--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,19 @@
-# Prerequisites
-*.d
+# Build directories
+build/
+bin/
+lib/
 
-# Compiled Object files
-*.slo
-*.lo
+# IDE settings
+.vscode/
+.idea/
+
+# Compiled Objects
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
 *.exe
-*.out
-*.app
 
-# debug information files
-*.dwo
+# Data Files (IMPORTANT: Don't commit 2GB pcap files)
+*.pcap
+*.dat
+*.log
